2008-03-04  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs: Log
	  some info when a template is unparseable.
	* MonoDevelop.Ide.Templates/FileTemplateReference.cs: Allow basic string
	  substitutions in the present name in a FileTemplateReference.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.addin.xml: Changed file menu for hig.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs,
	  MonoDevelop.Ide.Gui/Workbench.cs: Fixed some dialogs for hig compliance.

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs,
	  MonoDevelop.Ide.Templates/CombineDescriptor.cs,
	  MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CombineEntryDescriptor.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  MonoDevelop.Ide/Services.cs, MonoDevelop.Ide.Commands/ViewCommands.cs,
	  MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Commands/ToolsCommands.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/UnknownEntryNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ResourceFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Dialogs/CombineEntryFeatureSelector.cs,
	  MonoDevelop.Ide.Gui.Dialogs/AssemblyReferencePanel.cs,