@@ -1,3 +1,8 @@
+2008-03-05  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs: Changed
+	  remove file alert.
+
 2008-03-04  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs: Log
